<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/difficulties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <Button
            android:id="@+id/easy"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#600F"
            android:text="@string/easy" />

        <Button
            android:id="@+id/medium"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="#600F"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hard"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:background="#600F"
            android:text="@string/hard" />
    </RelativeLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#600F"
        android:text="@string/start" />

    <Button
        android:id="@+id/scores"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#600F"
        android:text="@string/scores" />

    <Button
        android:id="@+id/about"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#600F"
        android:text="@string/about" />

    <Button
        android:id="@+id/quit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#600F"
        android:text="@string/quit" />

</LinearLayout>