<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Game"
    android:orientation="vertical"
    android:id="@+id/game" >

    <TextView android:id="@+id/timeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="15sp"
        android:layout_marginBottom="10dp" />
    
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp" >
    	
        <Button android:id="@+id/hint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hint" />
        
        <Button android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save"
	        android:layout_centerHorizontal="true" />
        
	    <Button android:id="@+id/quit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/quit"
	        android:layout_alignParentRight="true" />
	    
    </RelativeLayout>

</LinearLayout>