<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Scores"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current"
        android:textSize="30sp" />
    <TextView android:id="@+id/currentWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />
    
    <TextView android:id="@+id/most"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />
    <TextView android:id="@+id/mostWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />
    
    <TextView android:id="@+id/bestTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bestTimes"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />
    <TextView android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp" />
    <TextView android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp" />
    <TextView android:id="@+id/time3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />
    <TextView android:id="@+id/time4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />
    <TextView android:id="@+id/time5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />
    
    <Button android:id="@+id/back"
	    android:layout_width="110dp"
	    android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
	    android:text="@string/back"
	    android:background="#600F" />

</LinearLayout>